tests/NormalTests/paczka1/fuzzy1/58180300.err
Error in line 1: 31Xzm S365 84,1
Error in line 8: ldbTYj7m S365 88,5
Error in line 16: ldbTYj7m A190 85,1
Error in line 15: 31Xzm A562 8,0
Error in line 30: NBZzqbdr S507 11,3
Error in line 35: NBZzqbdr A562 67,9
Error in line 38: A190 S507 89,0
